[package]
name = "acquire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
thiserror = "1.0.38"
termion = "2.0.1"
rand = "0.8.5"
serde = { version = "1.0.23", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.0", features = ["derive"] }
